--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
   "dependencies": {
     "angular": "^1.6.4",
     "angular-ui-router": "^0.4.2",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.17.1",
     "bootstrap": "^3.3.7",
+    "client-sessions": "^0.7.0",
     "cookies": "^0.7.0",
     "express": "^4.15.2",
     "jsonwebtoken": "^7.3.0",
