--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "cookies": "^0.7.0",
     "express": "^4.15.2",
     "jsonwebtoken": "^7.3.0",
+    "lodash": "^4.17.4",
     "method-override": "^2.3.7",
     "mongodb": "^2.2.25",
     "mongoose": "^4.9.0",
